--- a/projects/stack/index.html
+++ b/projects/stack/index.html
@@ -105,6 +105,8 @@ missing directory,
 <a href="https://github.com/commercialhaskell/stack/pull/4392/files">#4392</a></li>
 <li>Link to unit tests and integration tests,
 <a href="https://github.com/commercialhaskell/stack/pull/5809">#5809</a></li>
+<li>Add docs preview and build
+<a href="https://github.com/commercialhaskell/stack/pull/6604">#6604</a></li>
 </ul></li>
 <li><strong>Trivial</strong>
 <ul>
@@ -116,6 +118,8 @@ missing directory,
 <a href="https://github.com/commercialhaskell/stack/pull/5812">#5812</a></li>
 <li>Bump the cabal project to match <code>lts-20.0</code> in <code>stack.yaml</code>,
 <a href="https://github.com/commercialhaskell/stack/pull/6031">#6031</a></li>
+<li>Remove trailing ‘,’ from generated-other-modules
+<a href="https://github.com/commercialhaskell/stack/pull/4388">#4388</a></li>
 </ul></li>
 </ul>
 </article>
@@ -199,6 +203,8 @@ missing directory,
 <a href="https://github.com/commercialhaskell/stack/pull/4392/files">#4392</a></li>
 <li>Link to unit tests and integration tests,
 <a href="https://github.com/commercialhaskell/stack/pull/5809">#5809</a></li>
+<li>Add docs preview and build
+<a href="https://github.com/commercialhaskell/stack/pull/6604">#6604</a></li>
 </ul></li>
 <li><strong>Trivial</strong>
 <ul>
@@ -210,6 +216,8 @@ missing directory,
 <a href="https://github.com/commercialhaskell/stack/pull/5812">#5812</a></li>
 <li>Bump the cabal project to match <code>lts-20.0</code> in <code>stack.yaml</code>,
 <a href="https://github.com/commercialhaskell/stack/pull/6031">#6031</a></li>
+<li>Remove trailing ‘,’ from generated-other-modules
+<a href="https://github.com/commercialhaskell/stack/pull/4388">#4388</a></li>
 </ul></li>
 </ul>
 </article>
