--- a/projects/tooling/index.html
+++ b/projects/tooling/index.html
@@ -86,8 +86,10 @@ dependencies with or to build. That’s an area where a little help can go a lon
 way to ease the pain.</p>
 <h4 id="build-tools">Build Tools</h4>
 <ul>
-<li><code>haskell</code><a href="https://github.com/haskell/cabal"><strong>/cabal</strong></a><a href="#fn1" class="footnote-ref" id="fnref1" role="doc-noteref"><sup>1</sup></a></li>
-<li><code>commercialhaskell</code><a href="https://docs.haskellstack.org"><strong>/stack</strong></a><a href="#fn2" class="footnote-ref" id="fnref2" role="doc-noteref"><sup>2</sup></a></li>
+<li><code>haskell</code><a href="https://github.com/haskell/cabal"><strong>/cabal</strong></a><br />
+I’ve made many <a href="../../projects/cabal/">cabal contributions</a>.</li>
+<li><code>commercialhaskell</code><a href="https://docs.haskellstack.org"><strong>/stack</strong></a><br />
+I’ve collected a list of <a href="../../projects/stack/">stack contributions</a>.</li>
 <li><code>cabalism</code><a href="http://hackage.haskell.org/package/hpack-dhall"><strong>/hpack-dhall</strong></a><br />
 I started contributing and ended up
 <a href="https://github.com/cabalism/hpack-dhall/issues/3">owner and maintainer</a> of
@@ -121,13 +123,6 @@ stale links to <code>all-cabal-hashes</code> and <code>lts-haskell</code>.</li>
 <a href="https://github.com/input-output-hk/stack2nix/commit/e01483c14ec288eeeef586c9aa31c737042bda55">Parse</a>
 the mac operating system as <code>osx</code> or <code>darwin</code>.</li>
 </ul>
-<section id="footnotes" class="footnotes footnotes-end-of-document" role="doc-endnotes">
-<hr />
-<ol>
-<li id="fn1"><p>I have a separate page for <a href="../../projects/cabal/">cabal contributions</a><a href="#fnref1" class="footnote-back" role="doc-backlink">↩︎</a></p></li>
-<li id="fn2"><p>Same goes for <a href="../../projects/stack/">stack contributions</a><a href="#fnref2" class="footnote-back" role="doc-backlink">↩︎</a></p></li>
-</ol>
-</section>
 </article>
 
         </div>
@@ -190,8 +185,10 @@ dependencies with or to build. That’s an area where a little help can go a lon
 way to ease the pain.</p>
 <h4 id="build-tools">Build Tools</h4>
 <ul>
-<li><code>haskell</code><a href="https://github.com/haskell/cabal"><strong>/cabal</strong></a><a href="#fn1" class="footnote-ref" id="fnref1" role="doc-noteref"><sup>1</sup></a></li>
-<li><code>commercialhaskell</code><a href="https://docs.haskellstack.org"><strong>/stack</strong></a><a href="#fn2" class="footnote-ref" id="fnref2" role="doc-noteref"><sup>2</sup></a></li>
+<li><code>haskell</code><a href="https://github.com/haskell/cabal"><strong>/cabal</strong></a><br />
+I’ve made many <a href="../../projects/cabal/">cabal contributions</a>.</li>
+<li><code>commercialhaskell</code><a href="https://docs.haskellstack.org"><strong>/stack</strong></a><br />
+I’ve collected a list of <a href="../../projects/stack/">stack contributions</a>.</li>
 <li><code>cabalism</code><a href="http://hackage.haskell.org/package/hpack-dhall"><strong>/hpack-dhall</strong></a><br />
 I started contributing and ended up
 <a href="https://github.com/cabalism/hpack-dhall/issues/3">owner and maintainer</a> of
@@ -225,13 +222,6 @@ stale links to <code>all-cabal-hashes</code> and <code>lts-haskell</code>.</li>
 <a href="https://github.com/input-output-hk/stack2nix/commit/e01483c14ec288eeeef586c9aa31c737042bda55">Parse</a>
 the mac operating system as <code>osx</code> or <code>darwin</code>.</li>
 </ul>
-<section id="footnotes" class="footnotes footnotes-end-of-document" role="doc-endnotes">
-<hr />
-<ol>
-<li id="fn1"><p>I have a separate page for <a href="../../projects/cabal/">cabal contributions</a><a href="#fnref1" class="footnote-back" role="doc-backlink">↩︎</a></p></li>
-<li id="fn2"><p>Same goes for <a href="../../projects/stack/">stack contributions</a><a href="#fnref2" class="footnote-back" role="doc-backlink">↩︎</a></p></li>
-</ol>
-</section>
 </article>
 
                 </div>
