Top Cabal contribs in the past year

--- a/projects/cabal/index.html
+++ b/projects/cabal/index.html
@@ -79,7 +79,13 @@
 </header>
 
     
-    <p>A list of contributions I’ve made to <code>haskell</code><a href="https://github.com/haskell/cabal"><strong>/cabal</strong></a>:</p>
+    <p>As I’m posting this, on <code>2024-12-09</code>, I’m the most active Cabal contributor over the
+past 12 months behind the mergify bot:</p>
+<figure>
+<img src="../../images/top-cabal-contribs.png" id="fig-1" style="padding-left:2em;width:50%" alt="Figure 1: Cabal contributors over the past 12 months with more than 20 commits" />
+<figcaption aria-hidden="true"><strong>Figure 1:</strong> Cabal contributors over the past 12 months with more than 20 commits</figcaption>
+</figure>
+<p>A list of contributions I’ve made to <code>haskell</code><a href="https://github.com/haskell/cabal"><strong>/cabal</strong></a>:</p>
 <ul>
 <li><strong>Functionality</strong>; feature additions, bug fixes, make, continuous integration
 <ul>
@@ -315,7 +321,13 @@
 </header>
 
     
-    <p>A list of contributions I’ve made to <code>haskell</code><a href="https://github.com/haskell/cabal"><strong>/cabal</strong></a>:</p>
+    <p>As I’m posting this, on <code>2024-12-09</code>, I’m the most active Cabal contributor over the
+past 12 months behind the mergify bot:</p>
+<figure>
+<img src="../../images/top-cabal-contribs.png" id="fig-1" style="padding-left:2em;width:50%" alt="Figure 1: Cabal contributors over the past 12 months with more than 20 commits" />
+<figcaption aria-hidden="true"><strong>Figure 1:</strong> Cabal contributors over the past 12 months with more than 20 commits</figcaption>
+</figure>
+<p>A list of contributions I’ve made to <code>haskell</code><a href="https://github.com/haskell/cabal"><strong>/cabal</strong></a>:</p>
 <ul>
 <li><strong>Functionality</strong>; feature additions, bug fixes, make, continuous integration
 <ul>
