Add FPComplete engagement

--- a/cv/index.html
+++ b/cv/index.html
@@ -77,6 +77,11 @@
 </h2>
 <ul>
 <li>
+<span class="updo"><code>Y</code> <code>$</code> ▩ </span><span class="date"><code>2022/07—2023/08</code></span>
+<a href="https://www.fpcomplete.com/"><strong>FPComplete</strong></a>.
+☞ Develop a new subsite for an existing Yesod web site.
+</li>
+<li>
 <span class="updo"><code>U</code> <code>$</code> ▩ </span><span class="date"><code>2022/07—2023/08</code></span>
 <a href="https://www.fpcomplete.com/"><strong>FPComplete</strong></a>.
 ☞ Maintain a large Haskell codebase with
@@ -205,7 +210,7 @@ clipping and multithreading.
                                                       <span class="cactus">CC</span>
                                         <span class="waimak">DDDDDDDDDDD</span>   <span class="apress">PPPPPPPPPP</span>
                            <span class="niwa">WWWWWWWWWWWW</span> <span class="croplogic">LLLLLLLLLLLL</span><span class="travieo">VVVVVVVVVVV</span>
- <span class="trimble">TTTTTTTTTTTTT</span> <span class="sml">S</span><span class="obvious">OOOOO</span><span class="aspelle">EEEE</span>  <span class="nutricentre">NNNNNNNNNNNNNNN</span>            <span class="tagly">GG</span>   <span class="aqualinc">AAAAAAAAAA</span><span class="flaretiming">FFFFFFFFFFF</span><span class="bracco">B</span><span class="cit">C</span><span class="blobs">BB</span><span class="updo">UUU</span>
+ <span class="trimble">TTTTTTTTTTTTT</span> <span class="sml">S</span><span class="obvious">OOOOO</span><span class="aspelle">EEEE</span>  <span class="nutricentre">NNNNNNNNNNNNNNN</span>            <span class="tagly">GG</span>   <span class="aqualinc">AAAAAAAAAA</span><span class="flaretiming">FFFFFFFFFFF</span><span class="bracco">B</span><span class="cit">C</span><span class="blobs">BB</span><span class="updo">UUU</span>    <span class="updo">Y</span>
 <span class="date">-|--+--+--+--+--|--+--+--+--+--|--+--+--+--+--|--+--+--+--+--|--+--+--+--+--|--+--+--+--+--|-</span>
 <span class="date"> 1995           2000           2005           2010           2015           2020           2025</span>
 </code>
