End date for fpco

--- a/cv/index.html
+++ b/cv/index.html
@@ -77,7 +77,7 @@
 </h2>
 <ul>
 <li>
-<span class="updo"><code>Y</code> <code>$</code> ▩ </span><span class="date"><code>2025/01—2025/**</code></span>
+<span class="updo"><code>Y</code> <code>$</code> ▩ </span><span class="date"><code>2025/01—2025/06</code></span>
 <a href="https://www.fpcomplete.com/"><strong>FPComplete</strong></a>.
 ☞ Develop a new subsite for an existing Yesod web site.
 </li>
